Variation Reports Data
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24208

--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Statistics/VariationReports.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Statistics/VariationReports.html
@@ -15,7 +15,6 @@
                     <vr-select datasource="variationReportOptions" datatextfield="description" datavaluefield="value" selectedvalues="selectedReportOption" label="Variation Reports:" isrequired></vr-select>
                 </vr-columns>     
             </vr-row>
-            <vr-row></vr-row>
         </div>
     </vr-form>
 
@@ -40,8 +39,8 @@
                     <vr-datagridcolumn headertext="'Previous_%'" field="'PreviousPeriodTypeValuePercentage'" type="'Number'"></vr-datagridcolumn>
                     <vr-datagridcolumn ng-repeat="item in timeRanges" field="'Values[' + $index + ']'" headertext="item" type="'Number'"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'CarrierAccountID/ZoneID'" field="'ID'" ng-show="false"></vr-datagridcolumn> <!--ng-if="selectedReportOption.value==3 || selectedReportOption.value==7  "-->
-                    <vr-datagridexpandablerow> 
-                        <div ng-include="'/Client/Modules/Analytics/Views/Billing Statistics/VariationReports.html'"></div>
+                    <vr-datagridexpandablerow> <!-- ng-if= selectedReportOption.value==3 else include Customres/Suppliers-->
+                        <div ng-include="'/Client/Modules/Analytics/Views/Billing Statistics/VariationReportsDestinations.html'"></div>
                     </vr-datagrid>
             </vr-columns>
         </vr-row>
@@ -51,7 +50,7 @@
                     <vr-datagridcolumn headertext="'Total_AVG'" field="'TotalAverage'" type="'Number'"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Total_%'" field="'summarydata.TotalPercentage'" type="'Number'"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'TotalPrevious_%'" field="'summarydata.TotalPreviousPercentage'" type="'Number'"></vr-datagridcolumn>
-                    <vr-datagridcolumn ng-repeat="item in TotalValues" field="'Values[' + $index + ']'" headertext="item" type="'Number'"></vr-datagridcolumn>
+                    <!--<vr-datagridcolumn ng-repeat="item in TotalValues" field="'Values[' + $index + ']'" headertext="item" type="'Number'"></vr-datagridcolumn>-->
                 </vr-datagrid>
             </vr-columns>
         </vr-row>
