move testing controls from default to testview page
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24209

--- a/Vanrise/Code/Vanrise.Web/Client/Views/Default.html
+++ b/Vanrise/Code/Vanrise.Web/Client/Views/Default.html
@@ -1,46 +1,1 @@
-﻿<h1> default</h1>
-<input type="text" ng-model="testModel" />
-    {{testModel}}
-ff
-<vr-row>
-    <vr-columns width="normal"><div style="width:100%;background-color:red">normal</div></vr-columns>
-    <vr-columns width="small"><div style="width:100%;background-color:red">small</div></vr-columns>
-    <vr-columns width="large"><div style="width:100%;background-color:red">large</div></vr-columns>
-    <vr-columns width="1/4row"><div style="width:100%;background-color:red">1/4</div></vr-columns>
-    <vr-columns width="1/3row"><div style="width:100%;background-color:red">1/3</div></vr-columns>
-    <vr-columns width="1/2row"><div style="width:100%;background-color:red">1/2</div></vr-columns>
-    <vr-columns width="fullrow"><div style="width:100%;background-color:red">full</div></vr-columns>
-</vr-row>
-<input type="button" ng-click="postMsg()" value="Post" />
-
-<vr-datagridcell htmltemplate='html'>
-    
-</vr-datagridcell>
-<input type="button" ng-click="addItem()" value="Add Item" />
-<vr-datagrid datasource="gridData" maxheight="400px" loadmoredata="loadMoreData" on-ready="gridReady">
-    <vr-datagridcolumn headertext="'Column 3'" field="'col3'">
-    </vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Column 4'">
-        <input type="text" ng-model="dataItem.col3" />
-    </vr-datagridcolumn>
-</vr-datagrid>
-
-<vr-choices selectedindex="choiceIndex" onselectionchanged="choiceSelectionChanged" on-ready="choicesReady">
-    <vr-choice isselected="testObj.isTab1Selected" onselectionchanged="choiceSelectionChanged">test1</vr-choice>
-    <vr-choice isselected="testObj.isTab2Selected" onselectionchanged="choiceSelectionChanged">test2</vr-choice>
-    <vr-choice isselected="isTab3Selected">test3</vr-choice>
-    <vr-choice>test4</vr-choice>
-    <vr-choice>test5</vr-choice>
-</vr-choices>
-<div>
-
-</div>
-{{testObj}}
-choiceIndex
-<input type="text" ng-model="choiceIndex" ng-change="selectChoice()">
-testObj.isTab1Selected
-<input type="text" ng-model="testObj.isTab1Selected">
-testObj.isTab1Selected
-<input type="text" ng-model="testObj.isTab2Selected">
-isTab3Selected
-<input type="text" ng-model="isTab3Selected">
+﻿<h1>Welcome to T.One V2</h1>
