--- a/Vanrise/Code/Vanrise.Web/Client/Styles/TOnv2theme.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/TOnv2theme.css
@@ -1,13 +1,11 @@
-﻿
-.main{
-   padding-left:37%;
-}
-.login-container{
+﻿.login-container{
     background:url("../../Client/Images/login.png") center no-repeat;
     background-size: cover;
     width: 330px;
     height: 310px;
     min-width: 200px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .login-spacer{
     padding-bottom:3px;
