--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/WidgetsPages/WidgetPreview.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/WidgetsPages/WidgetPreview.html
@@ -25,8 +25,8 @@
         <vr-row>
             <div>
                 <vr-columns width="fullrow">
-                    <vr-directivewrapper directive="visualElement.directive" on-ready="visualElement.onElementReady" settings="visualElement.settings"
-                                         retrievedataonload="true" fromdate="fromDate" todate="toDate" timedimensiontype="selectedTimeDimensionType"></vr-directivewrapper>
+                    <vr-directivewrapper directive="visualElement.Setting.directive" on-ready="onElementReady" settings="visualElement.Setting.settings"
+                                         retrievedataonload="false" filter="filter"></vr-directivewrapper>
                 </vr-columns>
             </div>
 
