--- a/Vanrise/Code/Vanrise.Runtime.Web/Runtime/Views/TriggerTemplates/TimerTriggerTemplate.html
+++ b/Vanrise/Code/Vanrise.Runtime.Web/Runtime/Views/TriggerTemplates/TimerTriggerTemplate.html
@@ -1,9 +1,10 @@
 ﻿<div ng-controller="Runtime_TimeTriggerTemplateController">
-    <vr-row>
-        <vr-datetimepicker type="date" value="dateToRun" label="Run at:"></vr-datetimepicker>
-    </vr-row>
-    <vr-row>
-        <vr-textbox value="timeToRun"></vr-textbox>
-    </vr-row>
-
+    <vr-section title="Timer Trigger">
+        <vr-row>
+            <vr-datetimepicker type="date" value="dateToRun" label="Run at:"></vr-datetimepicker>
+        </vr-row>
+        <vr-row>
+            <vr-textbox value="timeToRun"></vr-textbox>
+        </vr-row>
+    </vr-section>
 </div>
