--- a/Vanrise/Code/Vanrise.Runtime.Web/Runtime/Views/WFScheduleTemplates/ScheduleDailyRepricingProcessTemplate.html
+++ b/Vanrise/Code/Vanrise.Runtime.Web/Runtime/Views/WFScheduleTemplates/ScheduleDailyRepricingProcessTemplate.html
@@ -1,10 +1,20 @@
 ﻿<div ng-controller="Runtime_ScheduleDailyRepricingProcessTemplateController">
-    <vr-row>
-        <vr-columns width="1/2row">
-            <vr-datetimepicker type="date" value="repricingDay" label="Repricing Day"></vr-datetimepicker>
-        </vr-columns>
-        <vr-columns width="1/2row">
-            <vr-switch value="divideProcessIntoSubProcesses" label="Divide Process"></vr-switch>
-        </vr-columns>
-    </vr-row>
+    <vr-section title="Daily Repricing Process Arguments">
+        <vr-row removeline>
+            <vr-columns width="1/2row">
+                <vr-select datatextfield="Name" datavaluefield="Value" label="Set Repricing Day to:"
+                           datasource="dateOptions" selectedvalues="selectedDateOption" onselectionchanged="dateOptionSelected()"></vr-select>
+            </vr-columns>
+        </vr-row>
+        <vr-row>
+            <vr-columns width="1/2row">
+                <vr-datetimepicker type="date" ng-show="specificDateOptionSelected" value="repricingDay"></vr-datetimepicker>
+            </vr-columns>
+        </vr-row>
+        <vr-row removeline>
+            <vr-columns width="1/2row">
+                <vr-switch value="divideProcessIntoSubProcesses" label="Divide Process"></vr-switch>
+            </vr-columns>
+        </vr-row>
+    </vr-section>
 </div>
