--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Statistics/VariationReports.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Statistics/VariationReports.html
@@ -4,16 +4,16 @@
             <vr-row removeline>
                 <vr-columns colnum="2">
                     <vr-datetimepicker type="date" label="Date:" value="fromDate" isrequired></vr-datetimepicker>
-                </vr-columns>           
+                </vr-columns>
                 <vr-columns colnum="2">
-                    <vr-textbox value="periodCount" label="Last:"  isrequired />
+                    <vr-textbox value="periodCount" label="Last:" isrequired />
                 </vr-columns>
                 <vr-columns colnum="2">
                     <vr-select datasource="timePeriods" datatextfield="description" datavaluefield="value" selectedvalues="selectedTimePeriod" label="Time Period:" isrequired></vr-select>
-                </vr-columns>    
+                </vr-columns>
                 <vr-columns colnum="2">
                     <vr-select datasource="variationReportOptions" datatextfield="description" datavaluefield="value" selectedvalues="selectedReportOption" label="Variation Reports:" isrequired></vr-select>
-                </vr-columns>     
+                </vr-columns>
             </vr-row>
         </div>
     </vr-form>
@@ -21,7 +21,7 @@
     <vr-row removeline>
         <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
             <div transclude-to="buttons">
-                <vr-button type="Search" formname="formFilter" data-onclick="onSearch"></vr-button> 
+                <vr-button type="Search" formname="formFilter" data-onclick="onSearch"></vr-button>
             </div>
         </vr-actionbar>
     </vr-row>
@@ -39,14 +39,16 @@
                     <vr-datagridcolumn headertext="'Previous_%'" field="'PreviousPeriodTypeValuePercentage'" type="'Number'"></vr-datagridcolumn>
                     <vr-datagridcolumn ng-repeat="item in timeRanges" field="'Values[' + $index + ']'" headertext="item" type="'Number'"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'CarrierAccountID/ZoneID'" field="'ID'" ng-show="false"></vr-datagridcolumn> <!--ng-if="selectedReportOption.value==3 || selectedReportOption.value==7  "-->
-                    <vr-datagridexpandablerow> <!-- ng-if= selectedReportOption.value==3 else include Customres/Suppliers-->
-                        <div ng-include="'/Client/Modules/Analytics/Views/Billing Statistics/VariationReportsDestinations.html'"></div>
-                    </vr-datagrid>
+                    <vr-datagridexpandablerow>
+                        <div ng-if="!show" ng-include=" '/Client/Modules/Analytics/Views/Billing Statistics/VariationReportsDestinations.html' "></div>
+                        <div ng-if="show"  ng-include="'/Client/Modules/Analytics/Views/Billing Statistics/VariationReportsCustomersSuppliers.html'"></div>
+                    </vr-datagridexpandablerow>
+                </vr-datagrid>
             </vr-columns>
         </vr-row>
-        <vr-row>            
-            <vr-columns colnum="12" >
-                <vr-datagrid >
+        <vr-row>
+            <vr-columns colnum="12">
+                <vr-datagrid>
                     <vr-datagridcolumn headertext="'Total_AVG'" field="'TotalAverage'" type="'Number'"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Total_%'" field="'summarydata.TotalPercentage'" type="'Number'"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'TotalPrevious_%'" field="'summarydata.TotalPreviousPercentage'" type="'Number'"></vr-datagridcolumn>
@@ -64,7 +66,8 @@
             <vr-columns colnum="2">
                 {{summarydata.TotalPreviousPercentage}}
             </vr-columns>
-            <vr-columns colnum="2"> Total Values
+            <vr-columns colnum="2">
+                Total Values
                 {{summarydata.TotalValues}}
             </vr-columns>
         </vr-row>
@@ -79,7 +82,7 @@
         </vr-row>
     </div>
 
- 
 
 
-   
+
+
