--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/DynamicPages/DynamicPageEditor.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/DynamicPages/DynamicPageEditor.html
@@ -1,19 +1,17 @@
-﻿<div vr-modalcontent ng-controller="Security_DynamicPagesEditorController" width="'80%'">
+﻿<div vr-modalcontent ng-controller="Security_DynamicPageEditorController" width="'80%'">
     <vr-modalbody vr-loader="isGettingData" maxheight="'700px'">
         <vr-form name="formDynamicPagesEditor">
-            <vr-choices selectedindex="selectedGroupKeyIndex" >
+            <vr-choices>
                 <vr-choice isselected="settingSelected">Setting</vr-choice>
-                <vr-choice isselected="designingSelected">Designing</vr-choice>
+                <vr-choice isselected="designSelected">Design</vr-choice>
                 <vr-choice isselected="previewSelected">Preview</vr-choice>
             </vr-choices>
             <div ng-show="settingSelected">
                 <vr-row>
-                    <vr-columns colnum="4">
-                        <vr-section title="Page Name">
+                    <vr-columns width="1/3row">
                             <vr-textbox value="pageName" label="Page Name" isrequired></vr-textbox>
-                        </vr-section>
                     </vr-columns>
-                    <vr-columns colnum="3">
+                    <vr-columns width="1/3row">
                         <vr-section title="Module">
                             <div data-tree-id="beTree"
                                  data-angular-treeview="true"
@@ -24,80 +22,56 @@
                             </div>
                         </vr-section>
                     </vr-columns>
-                    <vr-columns colnum="4">
+                    <vr-columns width="1/3row">
                         <vr-section title="Audiences">
-                            <vr-columns colnum="12">
-
+                            <vr-columns width="fullrow">
                                 <vr-select ismultipleselection label="Users:" datasource="users" selectedvalues="selectedUsers" datatextfield="Name" datavaluefield="UserId"
                                            entityname="Users">
                                 </vr-select>
                             </vr-columns>
-                            <vr-columns colnum="12">
+                            <vr-columns width="fullrow">
                                 <vr-select ismultipleselection label="Groups:" datasource="roles" selectedvalues="selectedRoles" datatextfield="Name" datavaluefield="RoleId"
                                            entityname="Roles">
                                 </vr-select>
                             </vr-columns>
                         </vr-section>
                     </vr-columns>
-
-                    
                 </vr-row>
-                 
             </div>
-            <div ng-show="designingSelected">
+            <div ng-show="designSelected">
                 <vr-form name="formDesigningSelectionModel">
                     <vr-row>
                         <vr-columns colnum="3">
                             <vr-select label="Widget:" datatextfield="Name" datavaluefield="ID"
-                                       datasource="widgets" selectedvalues="selectedWidget" isRequired></vr-select>
+                                       datasource="widgets" selectedvalues="selectedWidget" isrequired></vr-select>
                         </vr-columns>
                         <vr-columns colnum="3">
                             <vr-select datasource="numberOfColumns" datatextfield="description" datavaluefield="value" label="Row Space" selectedvalues="selectedNumberOfColumns" isrequired hidefilterbox></vr-select>
                         </vr-columns>
                     </vr-row>
                     <vr-row>
-
                         <div ng-include="selectedWidget.Setting.DirectiveTemplateURL"></div>
-
                     </vr-row>
                 </vr-form>
                 <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
                     <div transclude-to="buttons">
-                        <vr-button type="Add" formname="formDesigningSelectionModel" data-onclick="addContent"></vr-button>
+                        <vr-button type="Add" formname="formDesigningSelectionModel" data-onclick="addViewContent"></vr-button>
                     </div>
                 </vr-actionbar>
                 <div>
                     <vr-row>
-                        <vr-columns ng-repeat="Content in Contents" colnum="{{Content.NumberOfColumns}}">
+                        <vr-columns ng-repeat="viewContent in viewContents" colnum="{{viewContent.NumberOfColumns}}">
                             <i class="glyphicon glyphicon-th-list handeldrag"></i>
-                            <i class="glyphicon glyphicon-remove hand-cursor" ng-click="removeContent(Content)"></i>
+                            <i class="glyphicon glyphicon-remove hand-cursor" ng-click="removeViewContent(viewContent)"></i>
                             <!--<vr-textbox value="visualElement.Name" label="{visualElement.Name}"></vr-textbox>-->
                         </vr-columns>
                     </vr-row>
                 </div>
 
             </div>
-            <div ng-show="previewSelected" ng-if="Contents.length>0">
+            <div ng-show="previewSelected" ng-if="viewContents.length>0">
                 <div ng-include="'Client/Modules/Security/Views/DynamicPages/DynamicPagePreview.html'"></div>
-
-                <!--<div vr-loader="isGettingData">
-            <vr-row>
-                <div class="list-group dragbelzone" ng-sortable="itemsSortable">
-                    <vr-columns ng-repeat="visualElement in visualElements" colnum="{{visualElement.numberOfColumns}}">
-                        <i class="glyphicon glyphicon-th-list handeldrag"></i>
-                        <i class="glyphicon glyphicon-remove hand-cursor" ng-click="removeVisualElement(visualElement)"></i>
-                        <vr-directivewrapper directive="visualElement.directive" on-ready="visualElement.onElementReady" settings="visualElement.settings"
-                                             retrievedataonload="true" fromdate="fromDate" todate="toDate" timedimensiontype="selectedTimeDimensionType"></vr-directivewrapper>
-                    </vr-columns>
-                </div>
-
-            </vr-row>
-
-
-        </div>-->
-
             </div>
-
         </vr-form>
     </vr-modalbody>
     <div>
