--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/WidgetsPages/WidgetEditor.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/WidgetsPages/WidgetEditor.html
@@ -1,4 +1,4 @@
-﻿<div vr-modalcontent ng-controller="Security_WidgetsEditorController" width="'80%'">
+﻿<div vr-modalcontent ng-controller="Security_WidgetEditorController" width="'80%'">
     <vr-modalbody vr-loader="isGettingData" maxheight="'700px'">
         <vr-form name="formDynamicPagesEditor">
             <vr-choices selectedindex="selectedGroupKeyIndex" onselectionchanged="previewSelectionChanged();">
@@ -9,15 +9,11 @@
                 <vr-form name="formDesigningSelectionModel">
                     <vr-row>
                         <vr-columns width="large">
-                            <vr-section title="Widget Name">
-                                <vr-textbox value="WidgetName" label="Widget Name" isrequired></vr-textbox>
-                            </vr-section>
+                            <vr-textbox value="widgetName" label="Widget Name" isrequired></vr-textbox>
                         </vr-columns>
                         <vr-columns width="large">
-                            <vr-section title="Widget Type">
                                 <vr-select label="Widget:" datatextfield="Name" datavaluefield="ID"
                                            datasource="widgets" selectedvalues="selectedWidget"></vr-select>
-                            </vr-section>
                         </vr-columns>
                     </vr-row>
                     <vr-row>
@@ -26,14 +22,9 @@
                                 <div ng-include="selectedWidget.Setting.DirectiveTemplateURL"></div>
                             </vr-section>
                         </vr-columns>
-
                     </vr-row>
                 </vr-form>
-             
             </div>
-
-
-
             <div ng-if="previewSelected">
                 <div ng-include="'Client/Modules/Security/Views/WidgetsPages/WidgetPreview.html'"></div>
             </div>
