Runtime Module - Passing params to Scheduler Service Editor
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24258

--- a/Vanrise/Code/Vanrise.Runtime.Web/Runtime/Views/ActionTemplates/WFActionTemplate.html
+++ b/Vanrise/Code/Vanrise.Runtime.Web/Runtime/Views/ActionTemplates/WFActionTemplate.html
@@ -2,7 +2,7 @@
     <vr-section title="Worklfow Action">
         <vr-row>
             <vr-column width="1/2row">
-                <vr-select datatextfield="Name" datavaluefield="BPDefinitionID"
+                <vr-select datatextfield="Title" datavaluefield="BPDefinitionID"
                            datasource="bpDefinitions" selectedvalues="selectedBPDefintion"></vr-select>
             </vr-column>
         </vr-row>
