--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Traffic Statistics/ZoneMonitor.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Traffic Statistics/ZoneMonitor.html
@@ -59,20 +59,10 @@
         </vr-row>
         <vr-row>
             <vr-columns colnum="12" simplecol>
-                <div style="align-content:center">
-                    <vr-datagrid datasource="overallData">
-                        <vr-datagridcolumn ng-repeat="measure in measures" headertext="measure.description" field="measure.propertyName" type="'Number'"></vr-datagridcolumn>
-                    </vr-datagrid>
-                </div>
-
-            </vr-columns>
-        </vr-row>
-        <vr-row>
-            <vr-columns colnum="12" simplecol>
                 <vr-datagrid data-on-ready="onMainGridReady" datasource="data"
                              pagersettings="mainGridPagerSettings" menuactions="gridMenuActions">
-                    <vr-datagridcolumn ng-repeat="groupKey in currentSearchCriteria.groupKeys" headertext="groupKey.gridHeader" field="'GroupKeyValues[' + $index + '].Name'" columnindex="$index" widthfactor="15" enablehiding="'false'" isclickable="'true'" tag="groupKey" onclicked="onGroupKeyClicked"></vr-datagridcolumn>
-                    <vr-datagridcolumn ng-repeat="measure in measures" headertext="measure.description" field="measure.propertyName" type="'Number'" tag="measure" onsortchanged="onMainGridSortChanged"></vr-datagridcolumn>
+                    <vr-datagridcolumn ng-repeat="groupKey in currentSearchCriteria.groupKeys" headertext="groupKey.gridHeader" field="'GroupKeyValues[' + $index + '].Name'"  columnindex="$index" widthfactor="15" enablehiding="'false'" isclickable="'true'" tag="groupKey" onclicked="onGroupKeyClicked"></vr-datagridcolumn>
+                    <vr-datagridcolumn ng-repeat="measure in measures" headertext="measure.description" field="measure.propertyName" summaryfield="measure.propertyName" type="'Number'" tag="measure" onsortchanged="onMainGridSortChanged"></vr-datagridcolumn>
                     <vr-datagridexpandablerow >
                         <div ng-include="'/Client/Modules/Analytics/Views/Traffic Statistics/TrafficStatisticsGrid.html'"></div>
                     </vr-datagridexpandablerow>
