--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/DynamicPages/DynamicPageEditor.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/DynamicPages/DynamicPageEditor.html
@@ -41,11 +41,15 @@
             <div ng-show="designSelected">
                 <vr-form name="formDesigningSelectionModel">
                     <vr-row>
-                        <vr-columns colnum="3">
+                        <vr-columns width="normal">
+                            <vr-select label="Section:" datatextfield="Section" datavaluefield="ID"
+                                       datasource="sections" selectedvalues="selectedSection" isrequired></vr-select>
+                        </vr-columns>
+                        <vr-columns width="normal">
                             <vr-select label="Widget:" datatextfield="Name" datavaluefield="ID"
                                        datasource="widgets" selectedvalues="selectedWidget" isrequired></vr-select>
                         </vr-columns>
-                        <vr-columns colnum="3">
+                        <vr-columns width="normal">
                             <vr-select datasource="numberOfColumns" datatextfield="description" datavaluefield="value" label="Row Space" selectedvalues="selectedNumberOfColumns" isrequired hidefilterbox></vr-select>
                         </vr-columns>
                     </vr-row>
